added kafka streams application to aggregate customer order totals

--- a/kafka-ecommerce-order-consumer/src/main/resources/application.yml
+++ b/kafka-ecommerce-order-consumer/src/main/resources/application.yml
@@ -1,2 +1,14 @@
 server:
   port: 9002
+
+spring:
+  kafka:
+    bootstrap-servers: localhost:9092
+    consumer:
+      group-id: order-consumer-group
+      enable-auto-commit: false
+      key-deserializer: org.apache.kafka.common.serialization.StringDeserializer
+      value-deserializer: io.confluent.kafka.serializers.KafkaAvroDeserializer
+      auto-offset-reset: earliest
+      properties:
+        schema.registry.url: http://localhost:8085
