--- a/kafka-ecommerce-order-consumer/src/main/resources/application.yml
+++ b/kafka-ecommerce-order-consumer/src/main/resources/application.yml
@@ -5,10 +5,12 @@ spring:
   kafka:
     bootstrap-servers: localhost:9092
     consumer:
-      group-id: order-consumer-group
+      group-id: consumer-order-totals-group
       enable-auto-commit: false
       key-deserializer: org.apache.kafka.common.serialization.StringDeserializer
-      value-deserializer: io.confluent.kafka.serializers.KafkaAvroDeserializer
+      value-deserializer: org.apache.kafka.common.serialization.DoubleDeserializer
       auto-offset-reset: earliest
       properties:
         schema.registry.url: http://localhost:8085
+      topics:
+        consumer-order-totals-topic: consumer-order-totals
