--- a/kafka-ecommerce-order-streams/src/main/resources/application.yml
+++ b/kafka-ecommerce-order-streams/src/main/resources/application.yml
@@ -14,6 +14,9 @@ spring:
         processOrders-out-0:
           destination: consumer-order-totals
           content-type: application/*+avro
+        processOrders-out-1:
+          destination: fraud-alert-order-totals
+          content-type: application/*+avro
       kafka:
         streams:
           binder:
