Added orderId to the orderTotals & added shipment

--- a/kafka-ecommerce-order-consumer/src/main/resources/application.yml
+++ b/kafka-ecommerce-order-consumer/src/main/resources/application.yml
@@ -8,7 +8,7 @@ spring:
         definition: processOrderTotals
       bindings:
         processOrderTotals-in-0:
-          destination: consumer-order-totals
+          destination: consumer-orders-total
           group: processOrderTotals-consumers
           content-type: application/*+avro
       kafka:
