--- a/kafka-ecommerce-order-consumer/pom.xml
+++ b/kafka-ecommerce-order-consumer/pom.xml
@@ -95,6 +95,12 @@
             <artifactId>kafka-streams-avro-serde</artifactId>
             <version>5.2.4</version>
         </dependency>
+        <dependency>
+            <groupId>org.apache.avro</groupId>
+            <artifactId>avro</artifactId>
+            <version>1.12.0</version>
+            <scope>compile</scope>
+        </dependency>
     </dependencies>
 
     <build>
